# pymesh2d

./: GEBCO_grid.ipynb  README.md  code.py  code_1.py  pyproject.toml  setup.py  smooth_save.py  smooth_save_2.py  smooth_save_3.py
examples/: GEBCO_grid.ipynb  tridemo.py
exemples/: GEBCO_grid.grd  GEBCO_grid.ipynb
pymesh2d/: _version.py  initmsh.py  refine.py  smooth.py  tricost.py  triread.py
pymesh2d/aabb_tree/: drawtree.py  exchange.py  findball.py  findline.py  findtria.py  lineline.py  linenear.py  maketree.py  maprect.py  mapvert.py  queryset.py  scantree.py
pymesh2d/geom_util/: bfsgeo.py  fixgeo.py  getiso.py  getnan.py  poly_util.py  proj_util.py
pymesh2d/geomesh_util/: border_gesture.py  border_util.py  depth_field.py  export_mesh.py  grd_util.py  hdun_dispercion.py  interpolation_mesh.py  wavenumhunt.py
pymesh2d/hfun_util/: disphfn.py  lfshfn.py  limhfn.py  trihfn.py
pymesh2d/hjac_util/: limgrad.py
pymesh2d/mesh_ball/: cdtbal1.py  cdtbal2.py  inv_2x2.py  inv_3x3.py  pwrbal1.py  pwrbal2.py  tribal1.py  tribal2.py
pymesh2d/mesh_cost/: relhfn.py  triang.py  triarea.py  trideg.py  triscr.py
pymesh2d/mesh_file/: certify.py  inspect.py  loadmsh.py  savemsh.py
pymesh2d/mesh_util/: bfstri.py  cfmtri.py  circo.py  deltri.py  idxtri.py  isfeat.py  minlen.py  setset.py  tricon.py  tridiv.py  unique.py
pymesh2d/poly_test/: inpoly.py  inpoly_mat.py
